# vraid_media_player

./: CMakeLists.txt  README.md  main.cpp
gl_spec/: CMakeLists.txt
gl_spec/include/: gl_spec.h  gl_spec_frame.h  label_track.h
gl_spec/src/: gl_spec.cpp  gl_spec_audio_data_visual_worker.cpp  gl_spec_frame.cpp  label_track.cpp
main_frame_media/: CMakeLists.txt
main_frame_media/include/: frame_media_gl.h  main_frame_media.h
main_frame_media/src/: frame_media_gl.cpp  main_frame_media.cpp
main_window/: CMakeLists.txt
main_window/include/: mainwindow.h
main_window/src/: mainwindow.cpp
network_usage/: CMakeLists.txt
network_usage/api_usage/include/: upload_spec_api.h
network_usage/api_usage/src/: upload_spec_api.cpp
network_usage/ws_usage/include/: ws_client.h  ws_hub.h  ws_message.h  ws_sink.h
network_usage/ws_usage/src/: ws_client.cpp  ws_hub.cpp
resources/layout/: gl_spec_parent.ui  main_frame_media.ui  mainwindow.ui
standalone_libs/gl_qt_abstract_tool/: CMakeLists.txt
standalone_libs/gl_qt_abstract_tool/include/: gl_glad_helper.h  index_buffer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
standalone_libs/gl_qt_abstract_tool/resources/shader/: Basic.shader  BasicMath.shader  Label.shader  MinimalShader.shader  ShaderV_Flip.shader  SpectrogramQuad.shader
standalone_libs/gl_qt_abstract_tool/src/: gl_glad_helper.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
standalone_libs/librosa/: CMakeLists.txt
standalone_libs/librosa/include/: define.h  internal_tools.h  librosa.h  obj_audio.h  tools.h
standalone_libs/librosa/src/: internal_tools.cpp  librosa.cpp  tools.cpp  tools_helper.cpp  utils_outside.cpp
standalone_libs/media_reader/: CMakeLists.txt
standalone_libs/media_reader/audio_reader/include/: audio_player.h  wav_reader.h
standalone_libs/media_reader/audio_reader/src/: audio_player.cpp  utils_wav_reader.cpp  wav_reader.cpp
standalone_libs/media_reader/callback/: i_media_callback.h  i_media_sink.h
standalone_libs/media_reader/ffmpeg_reader/: ffmpeg_player.cpp  ffmpeg_read_usage.cpp  ffmpeg_reader.cpp
standalone_libs/media_reader/ffmpeg_reader/include/: ffmpeg_reader.h
standalone_libs/media_reader/media_obj/: media.h
